updated my homepage to make it a bit sophisticated with card hoover and made the navbar better. Also added content on the IT file

--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WorthyCs</a>
         <button
@@ -47,17 +47,305 @@
     <h1>Education courses that will lant you a job in South Africa</h1>
     <ul>
       <li>Postgraduate Certificate in Education (PGCE)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Early Childhood Development (ECD)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Education (BEd) in Foundation Phase Teaching</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Further Education and Training (FET) Certificate/Diploma</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Higher Education Studies</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Education (BEd) in Intermediate Phase Teaching</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Advanced Certificate in Education (ACE)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Special Needs Education</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>
         Bachelor of Education (BEd) in Senior Phase and Further Education
         Training
       </li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
     </ul>
     <br />
     <br />
