--- a/engineering.html
+++ b/engineering.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WorthyCs</a>
         <button
@@ -47,16 +47,304 @@
     <h1>Engineering courses that will land you a job in South Africa</h1>
     <ul>
       <li>Bachelor of Engineering (BEng) in Mechanical Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Engineering (BEng) in Civil Engineeringv</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Engineering (BEng) in Electrical Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>National Diploma in Mechanical Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>National Diploma in Civil Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>National Diploma in Electrical Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>
         Bachelor of Engineering Technology (BEngTech) in Chemical Engineering
       </li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Engineering (BEng) in Industrial Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>National Diploma in Chemical Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
     </ul>
     <br />
     <br />
