--- a/finance.html
+++ b/finance.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WorthyCs</a>
         <button
@@ -46,18 +46,338 @@
     </nav>
     <h1>Finance courses that will land you a job in South Africa</h1>
     <ul>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Commerce(BCom) in Accounting</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Business Science (BBusSc) in Finance</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Financial Management</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>
         Chartered Accountancy (CA) qualification (offered by SAICA-accredited
         institutions)
       </li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Commerce (BCom) in Investment Management</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Certificate in Financial Planning</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Commerce (BCom) in Economics and Finance</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Banking</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Commerce (BCom) in Financial Accounting</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
     </ul>
     <br />
     <br />
