--- a/healthcare.html
+++ b/healthcare.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WorthyCs</a>
         <button
@@ -47,14 +47,303 @@
     <h1>Healthcare courses that will lant you a job in South Africa</h1>
     <ul>
       <li>Bachelor of Nursing Science (BNurs)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Nursing (General, Psychiatric, Community)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Medicine and Bachelor of Surgery (MBChB)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Pharmacy</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Dental Surgery (BDS)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+
       <li>Bachelor of Occupational Therapy</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Physiotherapy</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Medical Laboratory Technology</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Radiography</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
     </ul>
     <br />
     <br />
