--- a/it.html
+++ b/it.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">WorthyCs</a>
         <button
@@ -49,14 +49,299 @@
     </h1>
     <ul>
       <li>Bachelor of Science (BSc) in Computer Science</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <p class="card-text">
+              University of Cape Town University of the Witwatersrand (Wits)
+              Stellenbosch University University of Pretoria University of
+              Johannesburg WeThinkCode CodeSpace Academy
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <p class="card-text">
+              Software Developer Web Developer Systems Analyst Database
+              Administrator IT Consultant
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Software Development Companies IT Consultancies Financial Services
+              Government Agencies Educational Institutions
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Information Technology</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Cape Peninsula University of Technology (CPUT) Durban University
+              of Technology (DUT) Tshwane University of Technology (TUT) Varsity
+              College
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              IT Support Specialist Help Desk Technician Network Technician
+              Systems Administrator Technical Support Analyst
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              IT Services Companies Educational Institutions Healthcare
+              Providers Financial Services Retail
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Information Technology (BIT)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              University of Johannesburg University of South Africa (UNISA) Cape
+              Peninsula University of Technology (CPUT) Nelson Mandela
+              University
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <p class="card-text">
+              IT Manager Network Administrator Information Systems Manager Cloud
+              Solutions Architect IT Project Manager
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Technology Companies Government Agencies Corporate Enterprises
+              Manufacturing E-commerce
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Certificate in Software Development</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Bootcamps</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">HyperionDev CodeSpace Academy</p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Junior Software Developer Software Tester Application Support
+              Analyst
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Software Development Startups Tech Firms Financial Services Gaming
+              Industry
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Network Engineering</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              CTU Training Solutions Boston City Campus & Business College
+              Damelin
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Network Engineer Network Administrator Systems Engineer Network
+              Security Analyst
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Telecommunications Internet Service Providers (ISPs) IT Consulting
+              Firms Large Corporations Government Organizations
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Science (BSc) in Data Science</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              University of the Witwatersrand (Wits) University of Cape Town
+              University of Pretoria
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Data Scientist Data Analyst Machine Learning Engineer Business
+              Intelligence Analyst
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Technology Startups Financial Services Healthcare Retail
+              E-commerce
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Certificate in Cybersecurity</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Bootcamps in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              GetSmarter (Cybersecurity online short courses) Cyberlogic
+              (Cybersecurity training provider)
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Cybersecurity Analyst Information Security Specialist Penetration
+              Tester Security Consultant
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Cybersecurity Firms Government Agencies Financial Institutions
+              Healthcare Defense Contractors
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Diploma in Systems Development</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              The IIE (Independent Institute of Education) Damelin Rosebank
+              College
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Systems Analyst Systems Developer Software Engineer IT Project
+              Coordinator
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Software Development Companies IT Services Providers Government
+              Agencies Educational Institutions
+            </p>
+          </div>
+        </div>
+      </div>
       <li>Bachelor of Information Systems (BIS)</li>
+      <div class="d-flex">
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Universities/Colleges in SA</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              University of Cape Town University of Pretoria University of
+              Johannesburg
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Career Prospects</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Business Systems Analyst IT Manager Information Systems Manager
+              Enterprise Architect
+            </p>
+          </div>
+        </div>
+        <div class="card text-grey bg-secondary mb-3" style="max-width: 18rem">
+          <div class="card-header">Hiring Industries</div>
+          <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+              Corporate Enterprises Consulting Firms Healthcare Providers
+              Financial Services Government Organizations
+            </p>
+          </div>
+        </div>
+      </div>
     </ul>
     <br />
     <br />
