--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="worthy career paths in South Africa. Courses that will guarantee you a job in South Africa.IT courses, healthcare courses, education courses,Engineering courses and finance courses. "
+      content="Worthy career paths in South Africa. Courses that will guarantee you a job in South Africa: IT courses, healthcare courses, education courses, engineering courses, and finance courses."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,18 +14,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>
-      A list of courses that will land you a job in South Africa-WorthyCs
-    </title>
+    <title>Courses That Will Land You a Job in South Africa - WorthyCs</title>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <div class="container-fluid">
-      <nav class="navbar fixed navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">WorthyCs</a>
           <button
@@ -40,12 +39,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav ms-auto">
               <a class="nav-link active" aria-current="page" href="/"
                 >Homepage</a
               >
               <a class="nav-link" href="/it.html">IT</a>
-              <a class="nav-link" href="/healthcare.html">HealthCare</a>
+              <a class="nav-link" href="/healthcare.html">Healthcare</a>
               <a class="nav-link" href="/finance.html">Finance</a>
               <a class="nav-link" href="/engineering.html">Engineering</a>
               <a class="nav-link" href="/education.html">Education</a>
@@ -54,15 +53,17 @@
         </div>
       </nav>
 
-      <h1>Career paths with a lot of job opportunities in South Africa</h1>
+      <header class="text-center my-5">
+        <h1>Career Paths with Ample Job Opportunities in South Africa</h1>
+      </header>
 
-      <div class="row">
-        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-          <div class="card border-primary mb-3" style="width: 20rem">
+      <div class="row g-4">
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="card border-primary mb-3">
             <img
               src="/images/engineeringAbout.jpg"
               class="card-img-top"
-              alt="..."
+              alt="Engineering"
             />
             <div class="card-body">
               <p class="card-text">
@@ -74,16 +75,18 @@
                 addressing complex challenges and driving innovation in these
                 industries.
               </p>
-              <a href="/engineering.html">View Courses</a>
+              <a href="/engineering.html" class="btn btn-primary"
+                >View Courses</a
+              >
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-          <div class="card border-primary mb-3" style="width: 20rem">
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="card border-primary mb-3">
             <img
               src="/images/healthcareAbout.webp"
               class="card-img-top"
-              alt="..."
+              alt="Healthcare"
             />
             <div class="card-body">
               <p class="card-text">
@@ -94,16 +97,18 @@
                 administration, cater to varied career paths with opportunities
                 for growth and development.
               </p>
-              <a href="/healthcare.html">View Courses</a>
+              <a href="/healthcare.html" class="btn btn-primary"
+                >View Courses</a
+              >
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-          <div class="card border-primary mb-3" style="width: 20rem">
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="card border-primary mb-3">
             <img
               src="/images/educationAbout.jpeg"
               class="card-img-top"
-              alt="..."
+              alt="Education"
             />
             <div class="card-body">
               <p class="card-text">
@@ -114,13 +119,13 @@
                 population contribute to the demand for educators with
                 specialized skills and expertise.
               </p>
-              <a href="/education.html">View Courses</a>
+              <a href="/education.html" class="btn btn-primary">View Courses</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-          <div class="card border-primary mb-3" style="width: 20rem">
-            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="card border-primary mb-3">
+            <img src="/images/itAbout.jpeg" class="card-img-top" alt="IT" />
             <div class="card-body">
               <p class="card-text">
                 IT courses have high job opportunities because of the increasing
@@ -128,16 +133,16 @@
                 specializations within IT, including software development,
                 cybersecurity, and data science, cater to various career paths.
               </p>
-              <a href="/it.html">View Courses</a>
+              <a href="/it.html" class="btn btn-primary">View Courses</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
-          <div class="card border-primary mb-3" style="width: 20rem">
+        <div class="col-lg-4 d-flex align-items-stretch">
+          <div class="card border-primary mb-3">
             <img
               src="/images/financeAbout.jpeg"
               class="card-img-top"
-              alt="..."
+              alt="Finance"
             />
             <div class="card-body">
               <p class="card-text">
@@ -147,27 +152,31 @@
                 for skilled individuals in banking, investments, financial
                 analysis, and risk management.
               </p>
-              <a href="/finance.html">View Courses</a>
+              <a href="/finance.html" class="btn btn-primary">View Courses</a>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <br />
-    <br />
-    <hr />
-    <footer>
-      For assistance with applications you can contact me on
-      <a href="mailto:matlouphutip@gmail.com" class="link-success"
-        >matlouphutip@gmail.com</a
-      >
-      or simply reach out to me on
-      <a href="https://www.instagram.com/_littleclaything_/" class="link-danger"
-        >Instagram</a
-      >. I wish you all the best with whichever career path you choose to embark
-      on.
-    </footer>
-    <br />
+      <footer class="mt-5 text-center">
+        <div class="container">
+          <p>
+            For assistance with applications, you can contact me at
+            <a href="mailto:matlouphutip@gmail.com">matlouphutip@gmail.com</a>
+            or reach out on
+            <a
+              href="https://www.instagram.com/_littleclaything_/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >.
+          </p>
+          <p class="mb-0">
+            I wish you all the best with whichever career path you choose to
+            embark on.
+          </p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
